<resources>
    <string name="app_name">Can I</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="contrasena">Contraseña</string>
    <string name="recuperar_cuenta">Recuperar cuenta</string>
    <string name="email">Email</string>
    <string name="enviar">Enviar</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="can_i">Can I?</string>
    <string name="cerveza">Cerveza</string>
    <string name="copa">Copa</string>
    <string name="sin_alcohol">Sin Alcohol</string>
    <string name="administrador">Administrador</string>
    <string name="gestion_articulos">Gestión de artículos</string>
    <string name="gestion_usuarios">Gestión de usuarios</string>
    <string name="gestion_incidencias">Gestión de incidencias</string>
    <string name="anadir_articulo">Añadir Artículo</string>
    <string name="crear_articulo">Crear Artículo</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="cancelar">Cancelar</string>
    <string name="stock">Stock</string>
    <string name="editar_articulo">Editar Artículo</string>
    <string name="confirmar">Confirmar</string>
    <string name="tipo_bebida">Tipo de bebida</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="apellido_1">Apellido 1</string>
    <string name="apellido_2">Apellido 2</string>
    <string name="dni">DNI</string>
    <string name="gestion_barras">Gestión de barras</string>
    <string name="borrar_barra">Borrar Barra</string>
    <string name="camareros">Camareros</string>
    <string name="administradores">Administradores</string>
    <string name="editar_usuario">Editar Usuario</string>
    <string name="crear_comanda">Crear comanda</string>
    <string name="cesta">Cesta</string>
    <string name="total_a_pagar">TOTAL A PAGAR</string>
    <string name="efectivo">EFECTIVO</string>
    <string name="pago_completado_exito">Pago completado con éxito</string>
    <string name="error_pago">Error al completar el pago</string>
    <string name="done">Done</string>
    <string name="qr_code">QR Code</string>
    <string name="hecho">Hecho</string>

    <!-- Dropdown items -->
    <string-array name="tipos_de_bebidas">
        <item>Cerveza</item>
        <item>Copa</item>
        <item>Sin alcohol</item>
    </string-array>

    <string-array name="tipos_de_usuarios">
        <item>Camarero</item>
        <item>Administrador</item>
    </string-array>

    <string name="error_seleccionar_imagen">Tu mensaje de error aquí</string>
    <string name="anadir_usuario">Añadir usuario</string>
    <string name="qr">QR</string>
    <string name="error_pago_2">El pago no ha podido completarse</string>

</resources>