<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.admin_menu.admin_usuarios.CrearUsuarioActivity"
    android:background="@color/can_i_c0026">

    <ImageView
        android:id="@+id/igIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cvBackgroundLogIn"
        android:src="@drawable/ic_appicon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBackgroundLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCrearUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crear_usuario"
                android:paddingBottom="10dp"
                android:textSize="21sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:background="@color/can_i_c0025"/>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <AutoCompleteTextView
                    android:id="@+id/actvTipoUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:inputType="none"
                    android:hint="Tipo de usuario" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvContrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasena"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/etContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@color/can_i_c0025"/>

            <Button
                android:id="@+id/bCrearUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/can_i_c0026"
                android:text="@string/confirmar"/>

            <Button
                android:id="@+id/bCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/can_i_c0022"
                android:text="@string/cancelar"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>