<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.admin_menu.AdminMenuActivity"
    android:background="@color/can_i_c0026">

    <ImageView
        android:id="@+id/igIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cvBackgroundLogIn"
        android:src="@drawable/ic_appicon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBackgroundLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNombreAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="John Doe"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tvRol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/administrador"
                android:textSize="16sp"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/bGestionArticulos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="20dp"
                android:backgroundTint="@color/can_i_c0026"
                android:text="@string/gestion_articulos"/>

            <Button
                android:id="@+id/bGestionEmpleados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="20dp"
                android:backgroundTint="@color/can_i_c0026"
                android:text="@string/gestion_usuarios"/>

            <Button
                android:id="@+id/bGestionIncidencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="20dp"
                android:backgroundTint="@color/can_i_c0026"
                android:text="@string/gestion_incidencias"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>