<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.admin_menu.admin_articulos.sel_articulo.edit_articulo.EditArticuloActivity"
    android:background="@color/can_i_c0026">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:padding="40dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivFotoArticulo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="Foto del artículo"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/bSeleccionarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/can_i_c0022"
            android:text="Seleccionar Foto" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBackgroundLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEditarArticulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar_articulo"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="21sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvNombreArticulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etNombreArticulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:ems="10"
                android:inputType="text"
                android:background="@color/can_i_c0025"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <AutoCompleteTextView
                    android:id="@+id/actvTipoBebida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:inputType="none"
                    android:hint="Tipo de bebida" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/etPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:ems="10"
                android:inputType="number"
                android:background="@color/can_i_c0025"/>

            <TextView
                android:id="@+id/tvStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/etStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="5dp"
                android:ems="10"
                android:inputType="number"
                android:background="@color/can_i_c0025"/>


            <Button
                android:id="@+id/bConfirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/can_i_c0026"
                android:text="@string/confirmar"/>

            <Button
                android:id="@+id/bCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/can_i_c0022"
                android:text="@string/cancelar"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>