<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.login.LogInActivity"
    android:background="@color/can_i_c0026">

    <ImageView
        android:id="@+id/igIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cvBackgroundLogIn"
        android:src="@drawable/ic_appicon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBackgroundLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvInicioSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="21sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:background="@color/can_i_c0025"/>

            <TextView
                android:id="@+id/tvContrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasena"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:padding="5dp"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@color/can_i_c0025"/>


            <Button
                android:id="@+id/bLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/can_i_c0026"
                android:text="@string/iniciar_sesion"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recuperar_cuenta"
                android:layout_marginBottom="50dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>