<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.camarero_home.CamareroHomeActivity"
    android:background="@color/can_i_c0024"
    android:backgroundTint="@color/can_i_c0026">

    <LinearLayout
        android:id="@+id/llHeader1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cvHome"
        android:padding="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/tvInicio"
                style="@style/HeaderApp_Inicio_Perfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/inicio"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/can_i"/>
            <TextView
                style="@style/HeaderApp_Inicio_Perfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/perfil"/>
        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/can_i_c0025"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llHeader1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:cardCornerRadius="50dp">
        ">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:gravity="start|center_vertical"
                        android:textStyle="bold"
                        android:text="@string/cerveza"/>

                    <ImageView
                        android:id="@+id/ivCerveza"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_weight="0"
                        android:src="@drawable/icons8_flecha_50"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCervezas"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:gravity="start|center_vertical"
                        android:textStyle="bold"
                        android:text="@string/copa"/>

                    <ImageView
                        android:id="@+id/ivCopa"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_weight="0"
                        android:src="@drawable/icons8_flecha_50"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCopa"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:gravity="start|center_vertical"
                        android:textStyle="bold"
                        android:text="@string/sin_alcohol"/>

                    <ImageView
                        android:id="@+id/ivSinAlcohol"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_weight="0"
                        android:src="@drawable/icons8_flecha_50"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSinAlcohol"
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
            <Button
                android:id="@+id/bAnadirArticulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/can_i_c0026"
                android:text="@string/anadir_articulo"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
